docs: display-cutout full-bleed + run_bounded redesign + jdk.compiler
AGENTS.md: mark run_bounded hang-proof (old must-NOT-wrap-launcher rule obsolete), document the load-bearing --add-modules=jdk.compiler flag. DECISIONS.md: entries for the display-cutout full-bleed window (HONOR dead-band), the jdk.compiler module fix, and the run_bounded hang-proof redesign. DESIGN.md: pads cutout-agnostic + window full-bleed past the cutout. MEMORY.md: cutout-letterbox reproduction on API<=34 (Pixel5_API34) + hang-proof redesign note.